# auto-patchinator

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
auto_patchinator/: __main__.py  cli.py  logging_setup.py  term.py
auto_patchinator/actions/: sequences.py  types.py
auto_patchinator/config/: inventory.py
auto_patchinator/executor/: credentials.py  ssh.py
auto_patchinator/plan/: action_mapping.py  dependency.py  excel_parser.py  run_plan.py  wave_mapping.py
auto_patchinator/reports/: report.py
auto_patchinator/runner/: controller.py
auto_patchinator/state/: models.py  store.py
inventory/: hosts.example.yaml  hosts.yaml
scripts/: gen_ci_fixture.py
tests/: conftest.py  test_action_mapping.py  test_cli_defaults.py  test_cli_helpers.py  test_controller_modes.py  test_credentials.py  test_dependency.py  test_excel_parser.py  test_inventory.py  test_logging_setup.py  test_pipeline.py  test_run_plan.py  test_sequences.py  test_ssh_helpers.py  test_state_store.py  test_term.py  test_wave_mapping.py
